...
            Label("Import Data (JSON)", systemImage: "square.and.arrow.down")
          }
        }

        Section(header: Text("Preferences")) {
          Picker("Calculate PRs from", selection: $prLookbackYears) {
            Text("All Time").tag(0)
            Text("Past Year").tag(1)
            Text("Past 2 Years").tag(2)
            Text("Past 3 Years").tag(3)
            Text("Past 5 Years").tag(5)
            Text("Past 7 Years").tag(7)
            Text("Past 10 Years").tag(10)
          }
...
