...
              .multilineTextAlignment(.center)
              .padding(.horizontal)

            Button {
              selectedTab = 2  // Navigate to the Log Lift tab
            } label: {
              Text("Log a Workout")
                .bold()
                .padding()
                .frame(maxWidth: .infinity)
                .background(Color.appAccent)
                .foregroundColor(.white)
                .cornerRadius(10)
...
              .onDelete(perform: deleteItems)
            }
          }
          .scrollContentBackground(.hidden)
          .searchable(
            text: $viewModel.searchText,
            prompt: "Search lift or reps..."
          )
          .navigationTitle("History")
          .toolbar {
            ToolbarItem(placement: .navigationBarTrailing) {
              Button(action: { viewModel.groupByExercise.toggle() }) {
                Image(
...
